sample/retrieveUnpackaged/objects/Portal_Marketing_Page_Criteria__c.object
<CustomObject>
    <description>Defines the criteria in which to select brokers who will be shown the marketing page.</description>
    <fields>
        <fullName>Condition__c</fullName>
        <description>The condition for the criteria.</description>
        <inlineHelpText>The condition for the criteria.</inlineHelpText>
        <label>Condition</label>
        <picklist>
            <picklistValues>
                <fullName>equals</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>not equal to</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>less than</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>greater than</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>less or equal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>greater or equal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>contains</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>does not contain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>starts with</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ends with</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Criteria_Matches__c</fullName>
        <description>This field indicates whether the criteria needs to match all Billing Accounts, etc. for the user or just any Billing Account, etc.  E.g. Does all billing accounts need to have Billing method set to Mail or just one of the Billing Accounts?</description>
        <inlineHelpText>This field indicates whether the criteria needs to match all Billing Accounts, etc. for the user or just any Billing Account, etc.  E.g. Does all billing accounts need to have Billing method set to Mail or just one of the Billing Accounts?</inlineHelpText>
        <label>Criteria Matches</label>
        <picklist>
            <controllingField>Object__c</controllingField>
            <picklistValues>
                <fullName>Any Billing Account</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>All Billing Accounts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Any Property for a Billing Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All Properties for all Billing Accounts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Any Consumption and Charge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All Consumption and Charges for a single Billing Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All Consumption and Charges for All Billing Accounts</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Criteria_Number__c</fullName>
        <description>An auto set value starting from 1 which is used to define the Criteria Logic (on the Portal Marketing Page object).</description>
        <label>Criteria Number</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Field__c</fullName>
        <description>The field of the object to which the criteria applies.</description>
        <inlineHelpText>The field of the object to which the criteria applies.</inlineHelpText>
        <label>Field</label>
        <picklist>
            <controllingField>Object__c</controllingField>
            <picklistValues>
                <fullName>Agent&apos;s Name</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agent&apos;s Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alternate Email Address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alternate Email Address 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assistant Name</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assistant Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Birthdate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concession Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact Type</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Department</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Description</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drivers License Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>First name</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full Name</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Has Insurance Claim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Is Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Key Customer Person</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Last Name</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Last Stay-in-Touch Request Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Last Stay-in-Touch Save Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Source</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail Opt Out</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mailing Address DPID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Opt In</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Organisation Name</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Address DPID</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <description>The object to which the criteria applies</description>
        <inlineHelpText>The object to which the criteria applies</inlineHelpText>
        <label>Object</label>
        <picklist>
            <picklistValues>
                <fullName>Person</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Property</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumption and Charge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Portal_Marketing_Page__c</fullName>
        <description>The Portal Marketing Page to which this criteria applies.</description>
        <inlineHelpText>The Portal Marketing Page to which this criteria applies.</inlineHelpText>
        <label>Portal Marketing Page</label>
        <referenceTo>Portal_Marketing_Page__c</referenceTo>
        <relationshipLabel>Portal Marketing Pages Criterion</relationshipLabel>
        <relationshipName>Portal_Marketing_Pages_Criterion</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <description>The value for the criteria</description>
        <inlineHelpText>The value for the criteria.  Values can have the following format:
Date: 2013-02-19 
Date/Time: 2013-02-18T00:00:00+10:00 (where +10:00 is for AEST) 
Boolean: true or false</inlineHelpText>
        <label>Value</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Portal Marketing Page Criteria</label>
    <nameField>
        <displayFormat>CRIT{00000}</displayFormat>
        <label>Criteria Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Portal Marketing Pages Criterion</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>